--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <style>
     #counter {
       background-color: black;
-      color: white;
+      color: white; 
       display: table;
       padding: 10px;
     }
@@ -25,7 +25,7 @@
 
   <ul class='likes'></ul>
 
-  <div>
+  <div id="comment-div">
     <h3>Comments</h3>
     <div id='list' class='comments'></div>
 
@@ -39,7 +39,7 @@
 
   </div>
 
-  <script src="index.min.js"></script>
+  <!-- <script src="index.min.js"></script> -->
   <script src="challenge.js"></script>
 </body>
 </html>
